--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
 colored = "2.1.0"
+comfy-table = "7.1.0"
 itertools = "0.12.0"
 nom = "7.1.3"
