--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitflags = "2.4.1"
 clap = { version = "4.4.11", features = ["derive"] }
 colored = "2.1.0"
 comfy-table = "7.1.0"
