--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ clap = { version = "4.4.11", features = ["derive"] }
 colored = "2.1.0"
 comfy-table = "7.1.0"
 itertools = "0.12.0"
+ndarray = "0.15.6"
 nom = "7.1.3"
