--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2021"
 
 [dependencies]
 bitflags = "2.4.1"
+bucket_queue = "2.0.0"
 clap = { version = "4.4.11", features = ["derive"] }
 colored = "2.1.0"
 comfy-table = "7.1.0"
