--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ bucket_queue = "2.0.0"
 clap = { version = "4.4.11", features = ["derive"] }
 colored = "2.1.0"
 comfy-table = "7.1.0"
+dyn-clone = "1.0.16"
 itertools = "0.12.0"
 ndarray = "0.15.6"
 nom = "7.1.3"
